some javascript change

--- a/index.html
+++ b/index.html
@@ -19,17 +19,21 @@
 
          <!-- ==========progress-bar=============== -->
           <div class="progress-bar">
-               <div class="progess-value">2/3 compleated</div>
-            </div>
-
-         <!-- ==========use-error-messgae=============== -->
+               <div class="progess-value">2/3 compleated </div>
+                   <!-- ==========use-error-messgae=============== -->
               <p class="user-error">Please set all the 3 goals!</p>
 
-         <!-- ==========gole-content=============== -->
+               
+            </div>
 
-            <div class="gole-container compleated">
+        
+         <!-- ==========gole-content=============== -->
+          <!-- add compleat for gole-container par class in using js  -->
+
+            <div class="gole-container ">
                 <div class="check-box">
-                    <img  class="check-icon" src="./assits/Group 1.svg">
+                    <img class="check-icon" src="./assits/Group 1.svg" alt="check-icon-now" >
+                    <!-- <img  class="check-icon" src="./assits/Group 1.svg"> -->
                 </div>
                 <input class="gole-input" type="text" placeholder="add a new gole">
 
@@ -37,7 +41,9 @@
          <!-- ========== 2-gole-content=============== -->
          <div class="gole-container ">
             <div class="check-box">
-                <img  class="check-icon" src="./assits/Group 1.svg">
+                <img class="check-icon" src="./assits/Group 1.svg" alt="check-icon-now" >
+
+                <!-- <img  class="check-icon" src="./assits/Group 1.svg"> -->
 
             </div>
             <input class="gole-input" type="text" placeholder="add a new gole">
@@ -47,14 +53,16 @@
          <!-- ==========3-gole-content=============== -->
          <div class="gole-container">
             <div class="check-box">
-                <img  class="check-icon" src="./assits/Group 1.svg">
+                <img class="check-icon" src="./assits/Group 1.svg" alt="check-icon-now" >
+
+                <!-- <img  class="check-icon" src="./assits/Group 1.svg"> -->
 
             </div>
             <input class="gole-input" type="text" placeholder="add a new gole">
 
            </div>
            <p class="qoute">“Move one step ahead, today!”</p>
-           <p class="vijay">Made with  ❤️ by Vijay kumar Prajapati  </p>
+           <p class="vijay">Made with ❤️ by Vijay kumar Prajapati  </p>
 
 
 
