new project is popup

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <!-- main-content  -->
       <div class="app-container">
          <h1 class="subtitle"><span>Today</span><img class="sun-img" src="./assits/Sun.svg" alt="sun"></h1>
-          <p class="progres-label">Raise the bar by completing your goals!</p>
+            <p class="progres-label">Raise the bar by completing your goals!</p>
 
          <!-- ==========progress-bar=============== -->
-          <div class="progress-bar">
-               <div class="progess-value">2/3 compleated </div>
+          <div class="progress-bar ">
+               <div class="progess-value">
+                <span>2/3 compleated</span> </div>
                    <!-- ==========use-error-messgae=============== -->
-              <p class="user-error">Please set all the 3 goals!</p>
+                <p class="user-error ">Please set all the 3 goals!</p>
 
                
             </div>
@@ -62,7 +63,7 @@
 
            </div>
            <p class="qoute">“Move one step ahead, today!”</p>
-           <p class="vijay">Made with ❤️ by Vijay kumar Prajapati  </p>
+           <p class="vijay">Made with ❤️ by Vijay kumar Prajapati </p>
 
 
 
@@ -72,5 +73,6 @@
     </main>
 
     <script src="./script/script.js"></script>
+    <script src="./json.js"></script>
 </body>
 </html>
